# CameraPreview

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/myopengl/zcweicheng/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data_preview_fragment.glsl  data_preview_vertex.glsl  ext_fragment.glsl  ext_vertex.glsl  slide_fragment.glsl  vertex.glsl  xuanwo_frament.glsl
app/src/main/cpp/: GLContextHolder.h  GLUtil.cpp  GLUtil.h  ImageFormat.h  JNIUtils.cpp  JNIUtils.h  RenderHolder.h  log.h  native-lib.cpp  render.cpp  render.h  shaders.h
app/src/main/cpp/encode/: base_include.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_ffmpeg_config.h  jx_ffmpeg_jni.cpp  jx_jni_handler.h  jx_user_arguments.h  jx_yuv_encode_h264.cpp  jx_yuv_encode_h264.h
app/src/main/cpp/encode/include/libavcodec/: mathops.h
app/src/main/cpp/encode/include/libavformat/: network.h  os_support.h
app/src/main/cpp/encode/include/libavresample/: avresample.h  version.h
app/src/main/cpp/encode/include/libswresample/: version.h
app/src/main/cpp/encode/include/libswscale/: version.h
app/src/main/cpp/filter/: BaseFilter.cpp  BaseFilter.h  CameraTextureFilter.cpp  CameraTextureFilter.h  RecordCameraFilter.cpp  RecordCameraFilter.h  RecordFilter.cpp  RecordFilter.h
app/src/main/cpp/h264encoder/: X264Encoder.cpp  X264Encoder.h  x264_config.h
app/src/main/cpp/render/: DataRender.cpp  DataRender.h  RecordCameraRender.cpp  RecordCameraRender.h  TextureRender.cpp  TextureRender.h
app/src/main/cpp/utils/: GLUtil.cpp  GLUtil.h
app/src/main/java/com/myopengl/zcweicheng/: Canstant.java  MainActivity.java  MyApp.java  PlayVideoActivity.java
app/src/main/java/com/myopengl/zcweicheng/Utils/: AssetsUtils.java  CameraHelper.java  OpenGlUtils.java  Rotation.java  TextureRotationUtil.java
app/src/main/java/com/myopengl/zcweicheng/encode/: EncodeHelper.java  FFmpegBridge.java  PixelBuffer.java  RecordHelper.java
app/src/main/java/com/myopengl/zcweicheng/filter/: BaseFilter.java  CameraInputFilter.java  RecordFilter.java
app/src/main/java/com/myopengl/zcweicheng/gles/: Content.java  ContentManager.java  Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedMovie.java  GeneratedTexture.java  GlUtil.java  MiscUtils.java  MovieEightRects.java  MoviePlayer.java  MovieSliders.java  OffscreenSurface.java  SpeedControlCallback.java  Sprite2d.java  Texture2dProgram.java  TextureRenderer.java  WindowSurface.java  WorkDialog.java
app/src/main/java/com/myopengl/zcweicheng/manager/: CameraManager.java
app/src/main/java/com/myopengl/zcweicheng/render/: CameraTextureRender.java  CameraTextureThread.java  RecordCameraRender.java  Renderer.java  VideoTextureRender.java  VideoTextureRenderThread.java
app/src/main/java/com/myopengl/zcweicheng/ui/: CameraDataPreviewActivity.java  CameraPreviewActivity.java  MainActivity.java  PlayVideoActivity.java  TestAnimatorDrawableActivity.java  TextureTouchListener.java  UpdateHandler.java
app/src/main/java/com/myopengl/zcweicheng/ui/activity/: CameraDataPreviewActivity.java  CameraGlSurfacePreviewActivity.java  CameraPreviewActivity.java  MainActivity.java  PlayVideoActivity.java  TestAnimatorDrawableActivity.java
app/src/main/java/com/myopengl/zcweicheng/ui/widget/: AnimatedRingDrawable.java  AnimatedScaleDrawable.java  BaseGLSurfaceView.java  CameraGLSurfaceView.java
app/src/main/res/layout/: activity_animator.xml  activity_camera_preview.xml  activity_camera_preview_data.xml  activity_glsurface_preview.xml  activity_main.xml  activity_play_movie.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/myopengl/zcweicheng/: ExampleUnitTest.java
